fix: Include CE attributes in sink headers
- Forward CloudEvent attributes to the sink
- Prevent default Camel header filter strategy removing the CE headers